# AIfifa

./: .env.example  .gitignore  DEPLOYMENT.md  NEXTJS_WALLET_INTEGRATION.md  README.md  access-guard.js  app.js  bracket.js  data.js  groups.html  index.html  mvp-history.html  package-lock.json  package.json  portal.js  predictions.html  render.yaml  semifinals.html  server.js  squad-data.js  styles.css  team.html  team.js  vercel.json
predict-odds-python/: .env.example  .gitignore  Dockerfile  OPERATIONS.md  README.md  SKILL.md  check_markets.py  docker-compose.example.yml  pyproject.toml  search_markets.py  search_wc.py
predict-odds-python/data/: bot-scan.json  fbref.csv  fbref_merged.csv  fbref_new.csv  fbref_old.csv  fbref_real.csv  telegram-panel.example.json  transfermarkt.csv  xgboost_model.json
predict-odds-python/references/: api-football-bet-ids.md  api-football-enrichment.md  betting-platforms.md  bookmaker-framework.md  data-integrity-synthetic-vs-real.md  enrichment-pipeline.md  espn-api.md  feature-nesting-bug.md  fotmob-pipeline.md  june22-group-stage-lessons.md  june23-group-stage-lessons.md  june24-group-stage-lessons.md  kelly-manual-allocation.md  kelly-over25-betting-flow.md  knockout-stage-patterns.md  model-vs-market-gap.md  poisson-v2-calibration.md  polymarket-clob-tokens.md  polymarket-live-odds.md  predictfun-sub-slugs-verified.md  prediction-output-standard.md  single-match-overfit.md  star-premium-pattern.md  third-round-dynamics.md
predict-odds-python/scripts/: _cron_api_football.py  _cron_check_espn.py  _cron_check_espn2.py  run-demo.ps1  (+17 more)
(+135 files in other folders)
